Fix style of pdf too large to attach ui

--- a/src/styles/mainClassDefinitions.less
+++ b/src/styles/mainClassDefinitions.less
@@ -221,15 +221,6 @@
 		line-height: 28px;
 		height: 28px;
 		margin-right: auto;
-
-		&.warning-image {
-			height: 15px;
-			width: 15px;
-			position: absolute;
-			top: 6px;
-			left: 0px;
-			border: 1px solid transparent;
-		}
 	}
 
 	.pdf-indicator {
@@ -261,6 +252,13 @@
 		border: 1px solid white;
 		background: transparent;
 		border-width: 0 1px 1px 0;
+	}
+
+	.warning-image {
+		position: absolute;
+		top: 7px;
+		width: 16px;
+		height: 16px;
 	}
 
 	#rangeInput {
